# Chess-Auto-Prep

./: .flutter-plugins-dependencies  .gitignore  CLAUDE.md  FLUTTER_FEATURE_PARITY.md  MOBILE_FILE_STORAGE.md  README.md  Readme.md  Spitballing-In-Class.md  UI_COMPARISON.md  analysis_options.yaml  chess_prep_gui.py  chess_prep_gui_old.py  config.py  debug_move_matching.dart  debug_move_stripping.dart  debug_move_validation.dart  debug_pgn_parsing.dart  debug_tree.py  dependencies.md  download_games.py  fen_database_map.py  fen_map_builder.py  fen_node.py  game_downloader.py  install_linux_desktop.sh  known-issues.md  lichess_output.txt  main.py  main2.py  main_window.py  pgns.pgn  pubspec.yaml  requirements.txt  run_with_cdbdirect.sh  stockfish-cool-facts.md  test-evaluation-format.js  test_chess_moves.dart  test_dart_analysis_standalone.dart  test_dartchess_parsing.dart  test_fixed_matching.dart  (+5 more)
booking-service/: .gitignore  README.md  config.py  server.py
browser-to-server-repertoire/: README.md  content.js  manifest.json  requirements.txt  server.py  test_server.py
controllers/: __init__.py  main_controller.py
core/: __init__.py  modes.py  tactics.py
docs/: ALGORITHM.md  COMPONENT_MAP.md  FUTURE_FEATURES.md  GAMES_DRIVEN_REPERTOIRE.md  tree-display-architecture.md
flatpak/: build.sh  org.chessautoprep.app.desktop  (+2 more)
lichess-opening-builder/engine_based/: __init__.py  hybrid_probability.py  maia2_wrapper.py  main_engine.py  pyproject.toml  requirements.txt  simple_search.py  stockfish_helper.py  stockfish_wrapper.py  tree_search.py  uci_engine.py
(+1046 files in other folders)
