[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-engine-opening-builder"
version = "0.1.0"
description = "Find tricky opening lines using Maia2 and Stockfish"
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "chess>=1.10.0",
    # Maia2 and its dependencies
    "maia2",
    "torch>=2.4.0",
    "numpy>=2.1.3",
    "einops>=0.8.0",
    "gdown>=5.2.0",
    "pandas>=2.2.3",
    "pyzstd>=0.15.9",
    "tqdm>=4.65.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
# For development
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
# Command-line entry point
opening-builder = "main_engine:main"

# Tool configurations

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--verbose", "--color=yes"]
